Implemented pretty URLs

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" type="text/css" href="/normalize-css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="/css/main.css" />
 		<link rel="stylesheet" type="text/css" href="/css/flexbox.css" />
+		<base href="/" >
 	</head>
 	<body>
 		<div class="flex-container">
